--- a/env/sensemap-backend.env
+++ b/env/sensemap-backend.env
@@ -1,7 +1,7 @@
 DATABASE_URL=postgres://sensetw:sensetw@db:5432/sensetw
 NODE_ENV=development
-SESSION_SECRET: aaaaaaaaaab08700000000004778461111111111
-CLIENT_URL: https://sense.tw/embed.js
-CLIENT_OAUTH_ID: 00e468bc-c948-11e7-9ada-33c411fb1c8a
-PUBLIC_URL: http://localhost:8000/
-HYPOTHESIS_API_ROOT: http://localhost:8000/h/api
+SESSION_SECRET=aaaaaaaaaab08700000000004778461111111111
+CLIENT_URL=http://localhost:8040/embed.js
+CLIENT_OAUTH_ID=a636e688-8b66-11e8-8053-cfd56f6a31d6
+PUBLIC_URL=http://localhost:8000/
+HYPOTHESIS_API_ROOT=http://localhost:8000/h/api
