--- a/docker/h-client/nginx-site.conf
+++ b/docker/h-client/nginx-site.conf
@@ -20,6 +20,7 @@ server {
 	server_name _;
 
 	location / {
+                add_header Access-Control-Allow-Origin *;
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
 		try_files $uri $uri/ =404;
