--- a/env/h.env
+++ b/env/h.env
@@ -9,6 +9,6 @@ VIA_URL=http://localhost:8030
 MAIL_DEFAULT_SENDER="Sense TW" <noreply@sense.tw>
 MAIL_HOST=127.0.0.1
 MAIL_PORT=25
-CLIENT_URL=http://hclient:8020/build
+CLIENT_URL=http://localhost:8020/build/boot.js
 CLIENT_OAUTH_ID=7eecc69e-8bd2-11e8-a8ec-ff6f0cd790c0
 CLIENT_RPC_ALLOWED_ORIGINS=http://localhost:8000 http://localhost:8010 http://localhost:8020 http://localhost:8030 http://localhost:8040
