--- a/docker/sensemap-backend/Dockerfile
+++ b/docker/sensemap-backend/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:8
 
+RUN apt update && \
+    apt-get install -y postgresql-client && \
+    apt-get clean
+
 RUN npm install -g concurrently
 
 RUN mkdir /workspace
