--- a/env/sensemap-backend-with-h.env
+++ b/env/sensemap-backend-with-h.env
@@ -1,7 +1,7 @@
 DATABASE_URL=postgres://sensetw:sensetw@db:5432/sensetw
 NODE_ENV=development
 SESSION_SECRET=aaaaaaaaaab08700000000004778461111111111
-CLIENT_URL=http://localhost:8020/build/boot.js
+CLIENT_URL=http://localhost:8040/embed.js
 CLIENT_OAUTH_ID=10133a7c-8eee-11e8-a828-dfa174f8daca
 PUBLIC_URL=http://localhost:8000/
 HYPOTHESIS_API_ROOT=http://localhost:8000/h/api
